[package]
name = "factory"
version = "0.1.0"
authors = ["Hazel Snider <hazelra@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.9.0"
coarse-prof = "0.2.4"

glium = "0.29.0"
nalgebra = "0.24.1"
